<resources>
    <string name="app_name">Exercise 4</string>
    <string name="Date_of_birth">Date of Birth: </string>
    <string name="Age">Age: </string>
    <string name="Minimum_epf_savings">Minimum epf savings: </string>
    <string name="Allowable_investment_amount">Allowable investment amount: </string>
    <string name="calculate">Calculate</string>
    <string name="reset">Reset</string>
</resources>
